prodMetadata/src/objects/NGIB_Query__c.object
<CustomObject>
    <description>Stores data from the new GI Bill Calculator site</description>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact&apos;s First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NGIB Queries</relationshipLabel>
        <relationshipName>NGIB_Queries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscribe_to_College_Factual_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if NGIB user subscribed to College Factual emails</description>
        <inlineHelpText>Checked if NGIB user subscribed to College Factual emails</inlineHelpText>
        <label>Subscribe to College Factual Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collegeId1__c</fullName>
        <description>College Factual field; Form Question: First college entry</description>
        <inlineHelpText>College Factual field; Form Question: First college entry</inlineHelpText>
        <label>collegeId1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>collegeId2__c</fullName>
        <description>College Factual field; Form Question: Second college entry</description>
        <inlineHelpText>College Factual field; Form Question: Second college entry</inlineHelpText>
        <label>collegeId2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>collegeId3__c</fullName>
        <description>College Factual field; Form Question: Third college entry</description>
        <inlineHelpText>College Factual field; Form Question: Third college entry</inlineHelpText>
        <label>collegeId3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>myAttendancePct__c</fullName>
        <description>College Factual field; Form Question: Plan To Attend</description>
        <inlineHelpText>College Factual field; Form Question: Plan To Attend</inlineHelpText>
        <label>myAttendancePct</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>myCumulativePost911Service__c</fullName>
        <description>College Factual field; Form Question: Cumulative Post 9-11 Active Duty Service</description>
        <inlineHelpText>College Factual field; Form Question: Cumulative Post 9-11 Active Duty Service</inlineHelpText>
        <label>myCumulativePost911Service</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>myDischargeDate__c</fullName>
        <description>College Factual field; Form Question: Anticipated Final Active Duty Discharge</description>
        <inlineHelpText>College Factual field; Form Question: Anticipated Final Active Duty Discharge</inlineHelpText>
        <label>myDischargeDate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>myMilitaryStatus__c</fullName>
        <description>College Factual field; Form Question: Military Status</description>
        <inlineHelpText>College Factual field; Form Question: Military Status</inlineHelpText>
        <label>myMilitaryStatus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>myMontgomoryContribution__c</fullName>
        <description>College Factual field; Form Question:</description>
        <inlineHelpText>College Factual field; Form Question:</inlineHelpText>
        <label>myMontgomoryContribution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>myOnlineStatus__c</fullName>
        <description>College Factual field; Form Question: Classes Will be Taken</description>
        <inlineHelpText>College Factual field; Form Question: Classes Will be Taken</inlineHelpText>
        <label>myOnlineStatus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>myPost911BenefitRecipient__c</fullName>
        <description>College Factual field; Form Question: Benefit to be used by</description>
        <inlineHelpText>College Factual field; Form Question: Benefit to be used by
*Used to be myBenefitRecipient</inlineHelpText>
        <label>myPost911BenefitRecipient</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>myPost911BenefitUsed__c</fullName>
        <description>College Factual field; Form Question: Post-9/11 GI Bill Benefit Already Used</description>
        <inlineHelpText>College Factual field; Form Question: Post-9/11 GI Bill Benefit Already Used</inlineHelpText>
        <label>myPost911BenefitUsed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>myPriorObligation__c</fullName>
        <description>College Factual field; Form Question: Enlisted or Commissioned</description>
        <inlineHelpText>College Factual field; Form Question: Enlisted or Commissioned</inlineHelpText>
        <label>myPriorObligation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>myState__c</fullName>
        <description>College Factual field; Form Question: Permanent Residence Is In</description>
        <inlineHelpText>College Factual field; Form Question: Permanent Residence Is In</inlineHelpText>
        <label>myState</label>
        <type>TextArea</type>
    </fields>
    <label>NGIB Query</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NGIB-{0000}</displayFormat>
        <label>NGIB Query</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NGIB Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>